--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -41,7 +41,7 @@
                     </small>
                 </section>
 
-                <section data-background="./images/unsplash-oldPhone.jpg">
+                <section data-background="/presentations/HackingCommunity/images/unsplash-oldPhone.jpg">
                     <blockquote class="blockquoteBlack">
                         <p>
                             Will share your experiences building communities?
@@ -70,7 +70,7 @@
             <!-- setup the story -->
             <section id="setup" data-transition="slide" data-background-transition="zoom">
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/TC/ThatConference-Full Logo - Textured - Navy@2x.png">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/TC/ThatConference-Full Logo - Textured - Navy@2x.png">
                     <aside class="notes">
                         This is the context of the entire conversation.
 
@@ -80,7 +80,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="cover" data-background="./images/TC/TC-2012-Stage.jpg">
+                <section data-background-color="#fff" data-background-size="cover" data-background="/presentations/HackingCommunity/images/TC/TC-2012-Stage.jpg">
                     <aside class="notes">
                         <p>THAT Conference 2012 Stage</p>
 
@@ -90,13 +90,13 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="cover" data-background="./images/TC/TC-2012-Keynote.jpg">
+                <section data-background-color="#fff" data-background-size="cover" data-background="/presentations/HackingCommunity/images/TC/TC-2012-Keynote.jpg">
                     <aside class="notes">
                         <p></p>
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="cover" data-background="./images/TC/TC-2018-Stage.jpg">
+                <section data-background-color="#fff" data-background-size="cover" data-background="/presentations/HackingCommunity/images/TC/TC-2018-Stage.jpg">
 
                     <aside class="notes">
                         THAT Conference 2018 Stage
@@ -107,7 +107,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/TC/TC-2018-mealtime.JPG">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/TC/TC-2018-mealtime.JPG">
                     <aside class="notes">
                         Everyone gathering for breakfast.
                         <div class="image-credit" data-credit-type="Photo Credit">
@@ -116,18 +116,18 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/TC/TC-2018SignBoardSigning.jpg">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/TC/TC-2018SignBoardSigning.jpg">
                     <aside class="notes">
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/TC/TC-2012-SignBoard.jpg">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/TC/TC-2012-SignBoard.jpg">
                     <aside class="notes">
                         <p>These are the people who took a chance on us.</p>
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="90%, auto" data-background="./images/TC/TC-2018-Signboard.jpg">
+                <section data-background-color="#fff" data-background-size="90%, auto" data-background="/presentations/HackingCommunity/images/TC/TC-2018-Signboard.jpg">
                     <aside class="notes">
                         <p>The community has grown from 400 to 1700.</p>
 
@@ -148,7 +148,7 @@
                     </h1>
                 </section>
 
-                <section data-transition-speed="slow" data-background="./images/unsplash-question.jpg">
+                <section data-transition-speed="slow" data-background="/presentations/HackingCommunity/images/unsplash-question.jpg">
                     <div>
                         <h1>What exactly is "community"?</h1>
                     </div>
@@ -211,7 +211,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#DA4A49" data-transition-speed="slow" data-background="./images/TC/TC-2018-circle.jpg">
+                <section data-background-color="#DA4A49" data-transition-speed="slow" data-background="/presentations/HackingCommunity/images/TC/TC-2018-circle.jpg">
                     <h1>We The <u>People</u></h1>
                     <aside class="notes">
                         <div class="image-credit" data-credit-type="Photo by">
@@ -327,7 +327,7 @@
                     </aside>
                 </section>
 
-                <section data-background-transition="fade" data-background="./images/stool-wm-2.jpg">
+                <section data-background-transition="fade" data-background="/presentations/HackingCommunity/images/stool-wm-2.jpg">
                     <aside class="notes">
                         <div class="image-credit" data-credit-type="Photo Credit">
                             <a class="image-credit__link" href="http://unspecified.io">Unspecified</a>
@@ -363,7 +363,7 @@
                 </section>
 
                 <section data-background-transition="fade" data-background-color="#fff" data-background-size="auto 90%"
-                    data-background="./images/JourneyMap.jpg">
+                    data-background="/presentations/HackingCommunity/images/JourneyMap.jpg">
                     <aside class="notes">
                         <div class="image-credit" data-credit-type="Photo Credit">
                             <a class="image-credit__link" href="http://unspecified.io">Unspecified</a>
@@ -400,7 +400,7 @@
                     </aside>
                 </section>
 
-                <section data-background-transition="fade" data-background="./images/TC/TC-2018-clarkonstage.jpg">
+                <section data-background-transition="fade" data-background="/presentations/HackingCommunity/images/TC/TC-2018-clarkonstage.jpg">
                     <aside class="notes">
 
                         <p>yes I accept the responsibility</p>
@@ -453,7 +453,7 @@
                     </aside>
                 </section>
 
-                <section data-background-transition="fade" data-background="./images/unsplash-train.jpg">
+                <section data-background-transition="fade" data-background="/presentations/HackingCommunity/images/unsplash-train.jpg">
                     <blockquote class="fragment blockquoteBlack">
                         <p>
                             <h1>Natural Rhythm</h1>
@@ -471,7 +471,7 @@
                     </aside>
                 </section>
 
-                <section data-background-transition="fade" data-background="./images/unsplash-train.jpg">
+                <section data-background-transition="fade" data-background="/presentations/HackingCommunity/images/unsplash-train.jpg">
                     <blockquote class="blockquoteBlack">
                         <p>
                             <h1>Train</h1>
@@ -489,7 +489,7 @@
                 </section>
 
                 <section data-background-color="#fff" data-background-size="auto 90%" data-background-transition="fade"
-                    data-background="./images/ConferenceSchedule.jpg">
+                    data-background="/presentations/HackingCommunity/images/ConferenceSchedule.jpg">
                     <aside class="notes">
                         <div class="image-credit" data-credit-type="Photo by">
                             <a class="image-credit__link" href="https://unspecified.io">
@@ -674,7 +674,7 @@
                 </section>
 
                 <section data-background-color="#89E0AD" data-background-size="cover" data-background-transition="fade"
-                    data-background="./images/tc/TC-2018sessionRoom.jpg">
+                    data-background="/presentations/HackingCommunity/images/tc/TC-2018sessionRoom.jpg">
 
                     <aside class="notes">
                         <p>Hyperfocus here on speakers.</p>
@@ -911,7 +911,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background="./images/unsplash-stickies.jpg">
+                <section data-background-color="#fff" data-background="/presentations/HackingCommunity/images/unsplash-stickies.jpg">
                     <blockquote class="fragment blockquoteBlack">
                         <p>
                             <h1>Have</h1>
@@ -947,7 +947,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background="./images/unsplash-time.jpg">
+                <section data-background-color="#fff" data-background="/presentations/HackingCommunity/images/unsplash-time.jpg">
                     <blockquote class="fragment blockquoteBlack">
                         <p>
                             <h1>Respect</h1>
@@ -985,7 +985,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="cover" data-background="./images/unsplash-baseball.jpg">
+                <section data-background-color="#fff" data-background-size="cover" data-background="/presentations/HackingCommunity/images/unsplash-baseball.jpg">
                     <aside class="notes">
                         <h1>Garyvee imagine if a professional sports figure quit when they got boo'd</h1>
 
@@ -1011,7 +1011,7 @@
                     <aside class="notes"></aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/CommunityGrid.jpg">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/CommunityGrid.jpg">
                     <aside class="notes">
                         <div class="image-credit" data-credit-type="Photo by ">
                             <a class="image-credit__link" href="https://unspecified.io">
@@ -1093,7 +1093,7 @@
 
             <!-- Closing -->
             <section id="closing" data-transition="slide" data-background-transition="zoom">
-                <section data-background-color="#000" data-background-size="cover" data-background="./images/TC/TC-2018-PeopleWalking.jpg">
+                <section data-background-color="#000" data-background-size="cover" data-background="/presentations/HackingCommunity/images/TC/TC-2018-PeopleWalking.jpg">
                     <h4>Take the next step!</h4>
                     <h1>Do!</h1>
                     <aside class="notes">
@@ -1103,7 +1103,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background="./images/unsplash-here.jpg">
+                <section data-background-color="#fff" data-background="/presentations/HackingCommunity/images/unsplash-here.jpg">
                     <aside class="notes">
                         <p>Think about your opportunity here today.</p>
                         <p>So now what?</p>
@@ -1141,7 +1141,7 @@
                     <aside class="notes"></aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="cover" data-background="./images/TC/TC-2018.jpg">
+                <section data-background-color="#fff" data-background-size="cover" data-background="/presentations/HackingCommunity/images/TC/TC-2018.jpg">
                     <aside class="notes">
                         <p>I never thought we'd get this far.</p>
                         <p>in 2010 I was told we would never amount to anything and the midwest was a waste of anyones
@@ -1154,7 +1154,7 @@
                     </aside>
                 </section>
 
-                <section data-background-color="#fff" data-background-size="auto 90%" data-background="./images/dancer.jpg">
+                <section data-background-color="#fff" data-background-size="auto 90%" data-background="/presentations/HackingCommunity/images/dancer.jpg">
 
                     <aside class="notes">
                         <p>Please remember, it's easy to cover up the hard work and wounds from others.</p>
@@ -1166,7 +1166,7 @@
                     </aside>
                 </section>
 
-                <section data-background="./images/unsplash-together.jpg">
+                <section data-background="/presentations/HackingCommunity/images/unsplash-together.jpg">
                     <aside class="notes">
                         Express Gratitude and give thanks...
                         <ul>
