fixed spelling error

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <title>Hacking Community for Good - Unspecified</title>
-    <meta name="description" content="The untold tips and tricks of navagating and being present in the tech community.">
+    <meta name="description" content="The untold tips and tricks of navigating and being present in the tech community.">
 
     <link rel="stylesheet" href="/presentations/revealjs/css/reveal.css">
     <link rel="stylesheet" href="/presentations/revealjs/css/theme/black.css">
