updated short url

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -62,7 +62,7 @@
                     <h4>The untold tips and tricks for being present in today's tech community.</h4>
                     <br />
                     <p>
-                        Slides @ <a href="git.io/hackingcommunity">git.io/hackingcommunity</a>
+                        Slides @ <a href="https://on.csell.net/hack">on.csell.net/hack</a>
                     </p>
                 </section>
             </section>
@@ -1197,7 +1197,7 @@
     </div>
     <footer class="mainFooter">
         <ul class="inline">
-            <li><a href="https://git.io/hackingcommunity" title="View the slides online.">git.io/hackingcommunity</a></li>
+            <li><a href="https://on.csell.net/hack" title="View the slides online.">on.csell.net/hack</a></li>
             <li><a href="https://twitter.com/csell5" title="Find Clark on Twitter">@csell5</a></li>
             <li><a class="no-icon" href="https://twitter.com/intent/tweet?text=Adventure%20as%20a%20career%20plan%20by%20%40jlengstorf&amp;hashtags=THATConference&amp;related=jlengstorf%2CThatConference&amp;url=https%3A%2F%2Fgit.io%2Fadv-career">#THATConference</a></li>
         </ul>
