adds the print css magic

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="The untold tips and tricks of navigating and being present in the tech community.">
 
     <link rel="stylesheet" href="/presentations/revealjs/css/reveal.css">
+    <link rel="stylesheet" href="/presentations/revealjs/css/print/pdf.css">
     <link rel="stylesheet" href="/presentations/revealjs/css/theme/black.css">
     <link rel="stylesheet" href="/presentations/presentations.css">
     <link rel="stylesheet" href="/presentations/unspecified.css">
