fixed reference to video

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -197,14 +197,16 @@
                 </section>
 
 
-                <section data-background-color="#fff" data-background-video="./videos/What-is-Community.m4v">
+                <!-- 
+                    <section data-background-color="#fff" data-background-video="./videos/What-is-Community.m4v">
                 </section>
+                -->
 
-                <!-- <section data-background-color="#fff">
+                <section data-background-color="#fff">
                     <iframe src="https://www.youtube.com/embed/E2z8YIn1vdc?ecver=1" frameborder="allow=" autoplay;
                         encrypted-media" allowfullscreen></iframe>
 
-                </section> -->
+                </section>
 
                 <section data-background-color="#DA4A49">
                     <h1>So, it's complex</h1>
