fixed the video player for the online video from askthat

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -205,15 +205,14 @@
                 </section>
 
 
-                <!-- 
-                    <section data-background-color="#fff" data-background-video="./videos/What-is-Community.m4v">
+                <!-- Just in case you need to work offline.
+                <section data-background-color="#fff" data-background-video="./videos/What-is-Community.m4v">
                 </section>
                 -->
 
-                <section data-background-color="#fff">
-                    <iframe src="https://www.youtube.com/embed/E2z8YIn1vdc?ecver=1" frameborder="allow=" autoplay;
-                        encrypted-media" allowfullscreen></iframe>
-
+                <section data-background-iframe="https://www.youtube.com/embed/E2z8YIn1vdc?autoplay=1&controls=0&showinfo=0&autohide=1">
+                    <aside class="notes">
+                    </aside>
                 </section>
 
                 <section data-background-color="#DA4A49">
