added a link back to the live video

--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -73,6 +73,10 @@
                     <p>
                         Slides @ <a href="https://on.csell.net/hack">on.csell.net/hack</a>
                     </p>
+                    <p>
+                        Video <a href="https://www.facebook.com/clarkpsell/videos/10156759369959808/">Recorded Live at
+                            CWITC</a>
+                    </p>
                 </section>
             </section>
 
