--- a/public/presentations/HackingCommunity/index.html
+++ b/public/presentations/HackingCommunity/index.html
@@ -53,7 +53,7 @@
                 <section data-background="/presentations/HackingCommunity/images/unsplash-oldPhone.jpg">
                     <blockquote class="blockquoteBlack">
                         <p>
-                            Will share your experiences building communities?
+                            Will you share your experiences building communities?
                         </p>
                     </blockquote>
                 </section>
